src/eval/snapshots/monkey_language_server__eval__test__int_minus.snap
---
source: src/eval/test.rs
description: let x = 1 - 1;
expression: "format!(\"{:#?}\\n\\n========================\\n\\n{:#?}\", env, diags)"
---
Environment {
    store: [
        Spanned(Int, x, (0,4)->(0,5)),
    ],
    outer: None,
    inner: [],
}

========================

[]
