src/eval/snapshots/monkey_language_server__eval__test__int_mult.snap
---
source: src/eval/test.rs
description: let x = 1 * 1;
expression: "format!(\"{:#?}\\n\\n========================\\n\\n{:#?}\", env, diags)"
---
Environment {
    store: [
        (
            "x",
            Spanned(Int, (0,4)->(0,5)),
        ),
    ],
    parent: None,
    children: [],
}

========================

[]
