src/eval/snapshots/monkey_language_server__eval__test__let_stmt_happy.snap
---
source: src/eval/test.rs
description: let a = 12;
expression: "format!(\"{:#?}\\n\\n========================\\n\\n{:#?}\", env, diags)"
---
Environment {
    store: [
        (
            "a",
            Spanned(Int, (0,4)->(0,5)),
        ),
    ],
    refs: [
        Spanned("a", "(0,4)->(0,5)"),
    ],
    parent_id: None,
    children: [],
    id: 0,
}

========================

[]
