src/eval/snapshots/monkey_language_server__eval__test__let_stmt_unhappy_1.snap
---
source: src/eval/test.rs
description: let a = ;
expression: "format!(\"{:#?}\\n\\n========================\\n\\n{:#?}\", env, diags)"
---
Environment {
    store: [],
    outer: None,
    inner: [],
}

========================

[
    Error(UnexpectedToken(";"), (0,8)->(0,9)),
]
