src/eval/snapshots/monkey_language_server__eval__test__lone_array_index.snap
---
source: src/eval/test.rs
description: "[1,2,3][0]"
expression: "format!(\"{:#?}\\n\\n========================\\n\\n{:#?}\", env, diags)"
---
Environment {
    store: [],
    refs: [],
    scope_range: "(0,0)->(0,10)",
    parent_range: None,
    children: [],
}

========================

[
    "Expression value is unused (0,0)->(0,10)",
]
