src/eval/snapshots/monkey_language_server__eval__test__lone_bool.snap
---
source: src/eval/test.rs
description: "true"
expression: "format!(\"{:#?}\\n\\n========================\\n\\n{:#?}\", env, diags)"
---
Environment {
    store: [],
    parent: None,
    children: [],
}

========================

[
    Warning(UnusedExpression, (0,0)->(0,4)),
]
