src/eval/snapshots/monkey_language_server__eval__test__lone_ident.snap
---
source: src/eval/test.rs
description: a
expression: "format!(\"{:#?}\\n\\n========================\\n\\n{:#?}\", env, diags)"
---
Environment {
    store: {},
    outer: None,
    inner: [],
}

========================

[
    Warning(UnusedExpression, (0,0)->(0,1)),
    Error(UnknownIdentifier("a"), (0,0)->(0,1)),
]
