src/eval/snapshots/monkey_language_server__eval__test__lone_nil.snap
---
source: src/eval/test.rs
description: nil
expression: "format!(\"{:#?}\\n\\n========================\\n\\n{:#?}\", env, diags)"
---
Environment {
    store: [],
    refs: [],
    scope_range: "(0,0)->(0,3)",
    parent_range: None,
    children: [],
}

========================

[
    "Expression value is unused (0,0)->(0,3)",
]
