src/eval/snapshots/monkey_language_server__eval__test__lone_string.snap
---
source: src/eval/test.rs
description: "\"hello world\""
expression: "format!(\"{:#?}\\n\\n========================\\n\\n{:#?}\", env, diags)"
---
Environment {
    store: [],
    refs: [],
    parent_id: None,
    children: [],
    id: 0,
}

========================

[
    Warning(UnusedExpression, (0,0)->(0,13)),
]
