src/eval/snapshots/monkey_language_server__eval__test__non_int_array_index.snap
---
source: src/eval/test.rs
description: "let x = [1,2,3][\"foo\"];"
expression: "format!(\"{:#?}\\n\\n========================\\n\\n{:#?}\", env, diags)"
---
Environment {
    store: [
        (
            "x",
            Spanned(Unknown, (0,4)->(0,5)),
        ),
    ],
    refs: [
        Spanned("x", "(0,4)->(0,5)"),
    ],
    scope_range: "(0,0)->(0,23)",
    parent_range: None,
    children: [],
}

========================

[
    Error(ExpectedIntIndex("array", "str"), (0,16)->(0,21)),
]
